--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="jumbotron">
-      <h1 class="display-4">OrgName Hackathon</h1>
+      <h1 class="display-4">Hackathon</h1>
     </div>
 
 <!--
@@ -18,7 +18,7 @@
 
 
     <P><center>
-    <h1>OrgName Hackathon</h1>
+    <h1>Hackathon</h1>
     </center></p>
 -->
     {% block body %} {% endblock %}
