--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -1,10 +1,9 @@
 {% macro render_field(field) %}
-  <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
   {% if field.errors %}
-    <ul class=errors>
+    <ul class="list-group list-group-flush">
     {% for error in field.errors %}
-      <li>{{ error }}</li>
+      <li class="list-group-item text-danger">{{ error }}</li>
     {% endfor %}
     </ul>
   {% endif %}
