--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,25 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Martious Technologies">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>Hackathon - Test Your Skills!</title>
+    <!-- Bootstrap Core CSS -->
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <!-- Additional Custom Style CSS -->
+    <link href="{{ url_for('static', filename='css/starter-template.css') }}" rel="stylesheet">
 </head>
+
 <body>
 
-<div class="jumbotron">
-    <h1 class="display-4">Hackathon</h1>
-</div>
+{% include '_navbar.html' %}
 
-<!--
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-
-
-    <P><center>
-    <h1>Hackathon</h1>
-    </center></p>
--->
 {% block body %} {% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -35,3 +31,4 @@
 
 </body>
 </html>
+
