--- a/hackathon/templates/_navbar.html
+++ b/hackathon/templates/_navbar.html
@@ -38,14 +38,14 @@
         <a class="nav-link" href="#"> <i class="fa fa-user"></i> My Team <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/logout"> <i class="fa fa-sign-out"></i> Logout <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('authorization.logout') }}"> <i class="fa fa-sign-out"></i> Logout <span class="sr-only">(current)</span></a>
       </li>
      {% else %}
       <li class="nav-item active">
-        <a class="nav-link" href="/signup"> <i class="fa fa-handshake-o"></i> Register <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('authorization.signup') }}"> <i class="fa fa-handshake-o"></i> Register <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/login"> <i class="fa fa-sign-in"></i> Login <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('authorization.login') }}"> <i class="fa fa-sign-in"></i> Login <span class="sr-only">(current)</span></a>
       </li>
       {% endif %}
     </ul>
