--- a/hackathon/templates/_navbar.html
+++ b/hackathon/templates/_navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="/">Hackathon Home</a>
+  <a class="navbar-brand" href="{{ url_for('home') }}">Hackathon Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,19 +10,13 @@
         |
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/"><i class="fa fa-th-large"></i> Submit Code<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('codesubmission.reviewcode') }}"><i class="fa fa-th-large"></i> Submit Code<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-link inactive">
         |
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#"><i class="fa fa-plus-circle"></i> Previous Submissions <Sticker></Sticker></a>
-      </li>
-      <li class="nav-link inactive">
-        |
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#"><i class="fa fa-minus-circle"></i> Anything Else</a>
+        <a class="nav-link" href="#"><i class="fa fa-minus-circle"></i> Score Card</a>
       </li>
     </ul>
 
