--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -1,32 +1,30 @@
+<!-- # TBD - Make this page look like https://getbootstrap.com/docs/4.0/examples/sign-in/ -->
+
 {% extends 'layout.html' %}
 
+{% from "_formhelpers.html" import render_field %}
+
 {% block body %}
-    <div class="container">
-        <h5>{{ code_form.code_text.label }}</h5>
-        <form method="POST" action="">
-            <div class="form-group">
-                {{ code_form.code_text }}
-            </div>
-            <div class="form-group">
-            <table width="100%">
-                <tr>
-                    <td>
-                        {{ code_form.code_verify }}
-                    </td>
-                    <td align="right">
-                        {{ code_form.code_submit }}
-                    </td>
-                </tr>
-            </table>
-            </div>
-        </form>
-
-        <h5>{{ result_form.result_text.label }}</h5>
-        <form method="POST" action="">
-            <div class="form-group">
-                {{ result_form.result_text }}
-            </div>
-        </form>
+    <div class="align-content-center">
+  <div class="row">
+  <div class= "m-5 w-25 p-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
     </div>
-
+  </div>
+  <div class="m-5 w-25 p-3">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+      </div>
+</div>
 {% endblock %}
