--- a/hackathon/templates/_navbar.html
+++ b/hackathon/templates/_navbar.html
@@ -34,6 +34,10 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{ url_for('authorization.logout') }}"> <i class="fa fa-sign-out"></i> Logout <span class="sr-only">(current)</span></a>
       </li>
+     {% elif config[ENABLE_KERBEROS]%}
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('authorization.kerberoslogin') }}"> <i class="fa fa-sign-in"></i> Login <span class="sr-only">(current)</span></a>
+      </li>
      {% else %}
       <li class="nav-item active">
         <a class="nav-link" href="{{ url_for('authorization.signup') }}"> <i class="fa fa-handshake-o"></i> Register <span class="sr-only">(current)</span></a>
