fixed issues with unauthorized page

--- a/hackathon/templates/authorization/unauthorized.html
+++ b/hackathon/templates/authorization/unauthorized.html
@@ -6,7 +6,19 @@
   <div class="container text-center">
   <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
 
-    You are not authorized to access this website.
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <strong>Holy guacamole!</strong> You don't have access to this website!
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+
+    <div class="alert alert-success" role="alert">
+      <h4 class="alert-heading">You think this is a mistake?</h4>
+      <p>Contact us</p>
+      <hr>
+      <p class="mb-0">If not, click here to join us....</p>
+    </div>
 
   </div>
   </div>
