Added code_submission features

--- a/hackathon/templates/codesubmission/codereview.html
+++ b/hackathon/templates/codesubmission/codereview.html
@@ -14,7 +14,7 @@
                         {{ code_form.code_verify }}
                     </td>
                     <td align="right">
-                        {{ code_form.code_submit }}
+                        Click when you are sure -> {{ code_form.code_submit }}
                     </td>
                 </tr>
             </table>
