--- a/hackathon/templates/_navbar.html
+++ b/hackathon/templates/_navbar.html
@@ -10,7 +10,7 @@
         |
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('codesubmission.reviewcode') }}"><i class="fa fa-th-large"></i> Submit Code<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url_for('codesubmission.participanthome')}}"><i class="fa fa-th-large"></i> Submit Code<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-link inactive">
         |
