--- a/hackathon/templates/codesubmission/participanthome.html
+++ b/hackathon/templates/codesubmission/participanthome.html
@@ -1,15 +1,22 @@
 {% extends 'layout.html' %}
 
+{% from "_formhelpers.html" import render_field %}
+
 {% block body %}
-    <div class="container">
+    <div class="align-content-center">
+      <div class="row">
+          {% for competition in competitions %}
 
-        <h5>you can see this page only if you are logged in.</h5>
-		
-		<p>
-        {% if current_user.is_authenticated %}
-           Hi {{ current_user.name }}!
-        {% endif %}
-        </p>
+              <div class= "m-5 w-25 p-3">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">{{ competition.name }}</h5>
+                    <p class="card-text">{{ competition.description }}</p>
+                    <a href="{{ url_for('codesubmission.attemptproblem', competition_id=competition.id)}}" class="btn btn-primary">Attempt</a>
+                  </div>
+                </div>
+              </div>
+          {%endfor%}
+      </div>
     </div>
-
 {% endblock %}
