--- a/hackathon/templates/layout.html
+++ b/hackathon/templates/layout.html
@@ -17,6 +17,23 @@
 
 {% include '_navbar.html' %}
 
+{% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+
+      <div class="alert alert-{{ category }}">{{ message }}</div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+
+{% if error %}
+    <div class="alert alert-danger">{{ error }}</div>
+{% endif %}
+
+{% if msg %}
+    <div class="alert alert-success">{{ msg }}</div>
+{% endif %}
+
 {% block body %} {% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
