--- a/hackathon/templates/layout.html
+++ b/hackathon/templates/layout.html
@@ -21,20 +21,34 @@
   {% if messages %}
     {% for category, message in messages %}
 
-      <div class="alert alert-{{ category }}">{{ message }}</div>
+        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
     {% endfor %}
   {% endif %}
 {% endwith %}
 
-{% if error %}
-    <div class="alert alert-danger">{{ error }}</div>
-{% endif %}
 
-{% if msg %}
-    <div class="alert alert-success">{{ msg }}</div>
-{% endif %}
 
-{% block body %} {% endblock %}
+<!--
+      <div class="alert alert-{{ category }}">{{ message }}</div>
+
+
+    {% if error %}
+        <div class="alert alert-danger">{{ error }}</div>
+    {% endif %}
+
+    {% if msg %}
+        <div class="alert alert-success">{{ msg }}</div>
+    {% endif %}
+-->
+
+    {% block body %} {% endblock %}
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
